crates/hpc-core/tests/compile-fail/api_misc.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/api_misc.rs
  |
  |     let _ = q.wait(evt, buf_ready);
  |               ----      ^^^^^^^^^ expected `DeviceBuffer<'_, '_, _, InFlight>`, found `DeviceBuffer<'_, '_, u32, Ready>`
  |               |
  |               arguments to this method are incorrect
  |
  = note: expected struct `DeviceBuffer<'_, '_, _, InFlight>`
             found struct `DeviceBuffer<'_, '_, u32, hpc_core::Ready>`
note: method defined here
 --> src/api.rs
  |
  |     pub fn wait<T>(
  |            ^^^^
